<resources>
    <string name="app_name">BasicCase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">EN YENİ ÜRÜNLER</string>
    <string name="all">TÜMÜ > </string>
    <string name="category">KATEGORİLER</string>
    <string name="collection">KOLEKSİYONLAR</string>
    <string name="shop_new">EN YENİ VİTRİNLER</string>
    <string name="shop_editor">EDİTÖR SEÇİMİ VİTRİNLER</string>
    <string name="showcase">VİTRİN</string>
    <string name="search_hint">Ürün veya Vitrin Ara</string>
    <string name="menu_search">Ara</string>
    <string name="search">Ara</string>
</resources>