<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <variable
            name="category"
            type="com.example.basiccase.api.model.categories.Category" />

        <variable
            name="product"
            type="com.example.basiccase.api.model.products.Products" />

        <variable
            name="datashopeditor"
            type="com.example.basiccase.api.model.shop.Shop" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_slider_features"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_dotContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/vp_slider_features"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_product_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/product_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_dotContainer"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/all"
                android:textAlignment="viewEnd"
                android:textDirection="ltr"
                android:contextClickable="true"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_product_title"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_product_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/bg_gray"
                app:layout_constraintBottom_toBottomOf="@id/rv_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_products" />

            <TextView
                android:id="@+id/tv_category_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_products" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_category_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_collection_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/collection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_category"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_all_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/all"
                android:textAlignment="viewEnd"
                android:textDirection="ltr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_collection_title"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_collection_title" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_editorshopBackground"
                colorFilter="@{datashopeditor.cover.url}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@id/rv_shops_editor"
                app:layout_constraintEnd_toEndOf="@id/rv_shops_editor"
                app:layout_constraintStart_toStartOf="@id/rv_shops_editor"
                app:layout_constraintTop_toTopOf="@id/rv_shops_editor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_shops_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/rv_collection" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_shop_editor_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/shop_editor"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rv_shops_editor"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_all_editor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/all"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textDirection="ltr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/rv_shops_editor"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlCompat,RtlSymmetry" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_shop_new_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shop_new"
                android:textColor="@color/quantum_grey_600"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_shops_editor"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_all_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/all"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textAlignment="viewEnd"
                android:textColor="@color/quantum_grey_600"
                android:textDirection="ltr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_shop_new_title"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="RtlCompat,RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_shops_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_show_all_new" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
